--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -21,8 +21,8 @@ a {
 }
 
 @font-face {
-  font-family: "KyoboHand";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff")
+  font-family: "CookieRun-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
@@ -39,7 +39,7 @@ a {
 html,
 body {
   font-family: "TTTogether";
-  background-color: #cea086;
+  background-color: #5b698a;
 }
 
 body {
@@ -98,7 +98,7 @@ header .navi a {
   width: 100%;
   height: 100%;
   display: block;
-  color: #ffe7d1;
+  color: #e1e6e2;
 }
 header .navi li {
   width: 100%;
@@ -107,8 +107,7 @@ header .navi li {
   line-height: 60px;
 }
 header .navi li.on a {
-  /* color: #cea086; */
-  color: #966c54;
+  color: #dfe9aa;
 }
 
 /*bottom_fix*/
@@ -120,14 +119,14 @@ header .navi li.on a {
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
-  border: 5px solid #ffe7d1;
+  border: 5px solid #e1e6e1;
   border-radius: 30px;
   z-index: 1;
   line-height: 60px;
   overflow: hidden;
   font-size: 2rem;
   text-align: center;
-  color: #ffe7d1;
+  color: #e1e6e2;
 }
 
 /*page*/
@@ -212,18 +211,18 @@ section {
 
 /*intro_right*/
 .intro_right {
-  width: 66%;
+  width: 68%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
-  gap: 10px;
+  justify-content: center;
+  gap: 20px;
   flex-direction: column-reverse;
 }
 
 /*intro_rightUp*/
 .intro_rightUp {
   width: 100%;
-  height: 80%;
+  height: 60%;
 }
 .intro_rightUp > li {
   width: 100%;
@@ -252,7 +251,7 @@ section {
 .cloud {
   width: 20%;
   height: 100%;
-  background-image: url(../img/cloud_beige.svg);
+  background-image: url(../img/cloud.svg);
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
@@ -266,7 +265,7 @@ section {
   position: absolute;
   right: -10px;
   bottom: 0;
-  color: #966c54;
+  color: #222;
 }
 
 /*emoji*/
@@ -301,56 +300,10 @@ section {
   width: 80px;
 }
 
-.emoji2 {
-  width: 80%;
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  line-height: 15px;
-}
-
-/*emoji 애니메이션*/
-.emoji2 li {
-  animation: swing 4s ease-in-out;
-}
-@keyframes swing {
-  0% {
-    transform: rotate(-25deg);
-  }
-  25% {
-    transform: rotate(25deg);
-  }
-  50% {
-    transform: rotate(-25deg);
-  }
-  100% {
-    transform: rotate(25deg);
-  }
-}
-
-.emoji2 li img {
-  width: 80px;
-}
-
-/*emoji hover*/
-.emoji li:hover img {
-  transform: rotateY(360deg);
-  transition: 0.8s;
-}
-.emoji2 li:hover img {
-  transform: rotateY(360deg);
-  transition: 0.8s;
-}
-
 /*intro_rightDown*/
 .intro_rightDown {
   width: 100%;
-  height: 20%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 30%;
   /*페이지 접속 시 움직임*/
   transform: translateY(-1000px);
   transition: 0.5s;
@@ -360,8 +313,8 @@ section {
 .aspiration {
   font-size: 2.3rem;
   color: #111;
-  line-height: 60px;
-  font-family: "KyoboHand";
+  line-height: 70px;
+  font-family: "CookieRun-Regular";
 }
 
 .aspiration .char {
@@ -419,16 +372,18 @@ section {
 .logo_left li:first-child {
   width: 100%;
   height: 50%;
-  background-color: #966c54;
+  background-color: #5b698a;
   border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   /*logo_left li에 transition-delay로 시간차를 주어 움직임 주기*/
   transition-delay: 0.4s;
 }
 .logo_left li:last-child {
-  background-color: #ffe7d1;
+  background-color: #5b698a;
   width: 100%;
   height: 50%;
   border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   /*logo_left li에 trans
   ition-delay로 시간차를 주어 움직임 주기*/
   transition-delay: 0.6s;
@@ -499,36 +454,15 @@ section {
   justify-content: center;
   gap: 20px;
 }
-
 .logo_right li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /*페이지 접속(스크롤) 시 움직임*/
-  transform: translateX(1000px);
-  transition: 1s;
+  width: 100%;
+  height: 50%;
+  border: 1px solid #fff;
 }
-.logo_right li img {
-  width: 90%;
-  height: 70%;
-}
-
 .logo_right li:first-child {
-  background-color: #ffe7d1;
-  width: 100%;
-  height: 50%;
-  border-radius: 25px;
-  /*logo_right li에 transition-delay로 시간차를 주어 움직임 주기*/
-  transition-delay: 0.4s;
-}
-.logo_right li:last-child {
-  background-color: #966c54;
-  width: 100%;
-  height: 50%;
-  border-radius: 25px;
-  /*logo_right li에 transition-delay로 시간차를 주어 움직임 주기*/
-  transition-delay: 0.6s;
+  font-size: 25px;
+  word-break: keep-all;
+  line-height: 45px;
 }
 
 /*about*/
@@ -551,8 +485,8 @@ section {
 .cards > li {
   width: 100%;
   height: 100%;
-  background-color: #ffe7d1;
-  border: 8px solid #966c54;
+  background-color: #e1e6e2;
+  border: 8px solid #dfe9aa;
   border-radius: 30px;
   box-sizing: border-box;
   position: relative;
