--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -457,12 +457,35 @@ section {
 .logo_right li {
   width: 100%;
   height: 50%;
-  border: 1px solid #fff;
+  font-family: "NEXON Lv2 Gothic";
+  /*페이지 접속(스크롤) 시 움직임*/
+  transform: translateX(1000px);
+  transition: 1s;
 }
+
 .logo_right li:first-child {
-  font-size: 25px;
+  font-size: 22px;
+  font-weight: 600;
   word-break: keep-all;
   line-height: 45px;
+  /*logo_left li에 transition-delay로 시간차를 주어 움직임 주기*/
+  transition-delay: 0.4s;
+}
+
+.logo_right li:last-child {
+  font-size: 1.1rem;
+  font-style: italic;
+  /*logo_left li에 transition-delay로 시간차를 주어 움직임 주기*/
+  transition-delay: 0.6s;
+}
+
+.logo_right li:last-child span {
+  background-color: #e1e6e2;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  display: inline-block;
+  border-radius: 20px;
+  transform: translateY(200px);
 }
 
 /*about*/
