--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -452,11 +452,12 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 20px;
+  gap: 50px;
 }
+
 .logo_right li {
   width: 100%;
-  height: 50%;
+  height: 100%;
   font-family: "NEXON Lv2 Gothic";
   /*페이지 접속(스크롤) 시 움직임*/
   transform: translateX(1000px);
@@ -468,13 +469,32 @@ section {
   font-weight: 600;
   word-break: keep-all;
   line-height: 45px;
+  height: 50%;
   /*logo_left li에 transition-delay로 시간차를 주어 움직임 주기*/
   transition-delay: 0.4s;
+}
+
+.logo_right li:first-child .char {
+  visibility: hidden;
+  display: inline-block;
+  animation: text 0s steps(2) forwards;
+  animation-delay: calc(0.06s * var(--char-index));
+}
+
+@keyframes text {
+  0% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
 }
 
 .logo_right li:last-child {
   font-size: 1.1rem;
   font-style: italic;
+  height: 20%;
+  margin-top: 100px;
   /*logo_left li에 transition-delay로 시간차를 주어 움직임 주기*/
   transition-delay: 0.6s;
 }
@@ -485,7 +505,6 @@ section {
   margin-bottom: 10px;
   display: inline-block;
   border-radius: 20px;
-  transform: translateY(200px);
 }
 
 /*about*/
@@ -880,7 +899,6 @@ section {
 .web_icons li {
   width: 100%;
   height: 100%;
-  cursor: pointer;
 }
 .web_icons li img {
   width: 100%;
@@ -972,4 +990,7 @@ section {
 }
 .design_bg03 {
   background-image: url(../img/coupon_illu.png);
+}
+.design_bg04 {
+  background-image: url(../img/bigsale_illu.png);
 }
