--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -264,6 +264,12 @@ section {
   width: 80px;
 }
 
+/*emoji hover*/
+.emoji li:hover img {
+  transform: rotateY(360deg);
+  transition: 0.8s;
+}
+
 /*intro_rightDown*/
 .intro_rightDown {
   width: 100%;
@@ -983,28 +989,60 @@ section {
 }
 
 /*design_bg*/
-.project_design div {
+.project_design li > div {
   width: 100%;
   height: 365px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 .design_bg01 {
-  background-image: url(../img/spring_illu.png);
+  background-image: url(../img/spring_mokup.png);
 }
 .design_bg02 {
-  background-image: url(../img/fleamarket_illu.png);
+  background-image: url(../img/fleamarket_mokup.png);
 }
 .design_bg03 {
-  background-image: url(../img/coupon_illu.png);
+  background-image: url(../img/coupon_mokup.png);
 }
 .design_bg04 {
-  background-image: url(../img/bigsale_illu.png);
+  background-image: url(../img/festival_mokup.png);
 }
 .design_bg05 {
-  background-image: url(../img/popup_illu.png);
+  background-image: url(../img/popup_mokup.png);
+}
+
+/*design_txt*/
+.project_design .design_txt {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+}
+
+.project_design .design_txt h2 {
+  font-weight: normal;
+}
+
+.project_design .design_txt p {
+  font-family: "NEXON Lv2 Gothic";
+  font-weight: 600;
+}
+
+/*design bg에 hover를 하면*/
+.project_design li > div:hover .design_txt {
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
 }
 
 /*finish*/
